# Rendering-3D

./: Makefile  README.md
.cache/clangd/index/: cube.cpp.C7DF8C638662C0EF.idx
.cmake/: CMakeLists.txt
src/: cube.cpp  sphere.cpp
targets/: cube  sphere
